--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Paralax</title>
 </head>
 <body>
-    
+    <div id="caixa01">
+        Desenvolvimeto Web, HTML5, CSS3, JS, PHP e MySQL
+    </div>
+    <div id="caixa02">
+        teste
+    </div>
+    <div id="caixa03">
+        rodapé
+    </div>
 </body>
 </html>
